adding new datasets

--- a/data/preprocess_ovarian_n_skin_n_luad_kim_cancer.ipynb
+++ b/data/preprocess_ovarian_n_skin_n_luad_kim_cancer.ipynb
@@ -66,14 +66,6 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "adata.obs['cluster_label'].value_counts(dropna=False).sort_index()",
-   "id": "893c2811ec12c28d",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
    "source": [
     "adata = adata[~adata.obs['cluster_label'].isna()]\n",
     "adata.shape"
@@ -109,6 +101,73 @@
     "    adata.write(Path(BASE_PATH_RAW_CANCER) / 'ovarian_malignant.h5ad')"
    ],
    "id": "92ddd05cb0199f98",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Data downloaded from [cellxgene](https://cellxgene.cziscience.com/collections/4796c91c-9d8f-4692-be43-347b1727f9d8). This contains the malignant and non-malignant epithelial cells from the same study. However, the data is already curated and preprocessed. We take the cell names from the curated data subset it from the previous data.",
+   "id": "85ca672ad53ae624"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "tmp_adata = sc.read_h5ad(Path(BASE_PATH_RAW_CANCER) / 'ovarian_vazquez_cellxgene_epithelial.h5ad')\n",
+    "tmp_adata.shape"
+   ],
+   "id": "4b973918969d94df",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "tmp_adata = tmp_adata[~tmp_adata.obs['cluster_label'].str.startswith('Ciliated.cell')].copy()\n",
+    "tmp_adata.shape"
+   ],
+   "id": "106310cad0bfdd98",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "print('Nr. cells in both datasets:\\t\\t', len(set(tmp_adata.obs_names) & set(adata.obs_names)))\n",
+    "print('Nr. cells only in the curated dataset:\\t', len(set(tmp_adata.obs_names) - set(adata.obs_names)))\n",
+    "print('Nr. cells only in the filtered dataset:\\t', len(set(adata.obs_names) - set(tmp_adata.obs_names)))"
+   ],
+   "id": "f367140e8646dcef",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "adata = adata[adata.obs_names.isin(tmp_adata.obs_names)].copy()",
+   "id": "97f451b1fb146e7",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "if SAVE:\n",
+    "    adata.write(Path(BASE_PATH_RAW_CANCER) / 'ovarian_malignant_2.h5ad')"
+   ],
+   "id": "7fcd237e7961d73a",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "del adata",
+   "id": "aa295004672b2159",
    "outputs": [],
    "execution_count": null
   },
@@ -219,7 +278,7 @@
    "cell_type": "code",
    "source": [
     "if SAVE:\n",
-    "    adata.write(Path(BASE_PATH_RAW_CANCER) / 'skin_malignant_2.h5ad')"
+    "    adata.write(Path(BASE_PATH_CANSIG_PP_CANCER) / 'skin_malignant_2.h5ad')"
    ],
    "id": "acda86e67c696bac",
    "outputs": [],
