--- a/notebooks/comparable_score_ranges/create_plot.ipynb
+++ b/notebooks/comparable_score_ranges/create_plot.ipynb
@@ -7,7 +7,7 @@
     "# This notebook creates the plots for the comparability evaluation of the different scoring methods.\n",
     "This notebook is structured as follows:\n",
     "1. Load the results of the comparability evaluation. **NOTE**: The results are not provided in the repository. Need to run the evaluation first: `experiments/run_comp_range_exp.sh`\n",
-    "2. Create confusion matrix plots (Suppl. Figure S7 & S9)\n",
+    "2. Create confusion matrix plots (Suppl. Figure S7 & S10)\n",
     "3. Create performance overview tables (Suppl. Table S2 & S3)\n",
     "4. Show the difference in performance for cansig pp and non-canisg pp (Suppl. Figure S12)\n",
     "5. Compute performance plots for main text Figure 2 (Scatter plot & Bar plot)"
@@ -153,10 +153,12 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "all_ds['cell_type_pp'] = all_ds.cell_type.map({\"breast_malignant\": 'BRCA (6 states)',\n",
+    "all_ds['cell_type_pp'] = all_ds.cell_type.map({\"breast_malignant\": 'BC (6 states)',\n",
     "                                               'luad_kim_malignant': 'LUAD (3 states)',\n",
     "                                               'luad_kim_malignant_2': 'LUAD (3 states, 3ca)',\n",
     "                                               'ovarian_malignant': 'HGSOC (8 states)',\n",
+    "                                               'ovarian_malignant_bak': 'HGSOC (8 states, bak)',\n",
+    "                                               'ovarian_malignant_2': 'HGSOC (8 states, cellxgene)',\n",
     "                                               'skin_malignant': 'cSCC (4 states, self-pp)',\n",
     "                                               'skin_malignant_2': 'cSCC (4 states)',\n",
     "                                               'pbmc_b_mono_nk': 'B, Monocytes, NK cells',\n",
@@ -477,6 +479,20 @@
     "save_close_or_show(fig, SAVE, save_path=storing_path / 'skin_ds_pp_diff.svg')"
    ],
    "id": "36806b219e992284",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "ovarian_results = all_ds[all_ds.cell_type.str.contains('ovarian')].copy()\n",
+    "ovarian_results = ovarian_results[~ovarian_results.cell_type.str.contains('_bak')].copy()\n",
+    "fig = compare_two_scoring_methods(ovarian_results)\n",
+    "save_close_or_show(fig, SAVE, save_path=storing_path / 'ovarian_ds_pp_diff.pdf')\n",
+    "save_close_or_show(fig, SAVE, save_path=storing_path / 'ovarian_ds_pp_diff.svg')"
+   ],
+   "id": "8745f719ac7efcad",
    "outputs": [],
    "execution_count": null
   },
