--- a/notebooks/construction_scoring_methods/compare_python_and_R_versions_of_scoring_methods.ipynb
+++ b/notebooks/construction_scoring_methods/compare_python_and_R_versions_of_scoring_methods.ipynb
@@ -436,6 +436,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0a35e06d-f7bb-4f09-8ef1-fffddd2381a0",
+   "metadata": {},
+   "source": [
+    "### Plot individual pairs"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e081b569",
@@ -451,6 +459,14 @@
     "    name_2 = lbls[1].rsplit('_', 1)[0]\n",
     "    fig.savefig(os.path.join(base_path, 'plots', f'scatter_{name_1}_vs_{name_2}{appendix}.png'), dpi=300)\n",
     "    plt.show(fig)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e762f56-7ff0-4f82-b96c-60eb29100cbf",
+   "metadata": {},
+   "source": [
+    "### Plot all together"
    ]
   },
   {
@@ -626,10 +642,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cd7101ed-73a7-4f19-a6d8-fb1bb902baf1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stat_df = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "c5da2eac",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np \n",
     "g = sns.relplot(data=df, x=\"R\", y=\"Python\",col=col, row=row, \n",
     "                row_order=row_order,\n",
     "                col_order=col_order,\n",
@@ -661,9 +688,51 @@
     "        # Add the correlation coefficient as text annotation\n",
     "        ax.annotate(f\"R = {r:.3f}\", xy=(0.1, 0.8), xycoords='axes fraction',fontsize=14)\n",
     "\n",
+    "        # Sample size and degrees of freedom\n",
+    "        n = len(val['Python'])\n",
+    "        df_stat = n - 2\n",
+    "        \n",
+    "        # Calculate 95% confidence intervals\n",
+    "        z = np.arctanh(r)\n",
+    "        se = 1/np.sqrt(n-3)\n",
+    "        ci_lower = np.tanh(z - 1.96*se)\n",
+    "        ci_upper = np.tanh(z + 1.96*se)\n",
+    "\n",
+    "        stat_df.append(\n",
+    "            {\n",
+    "            'Scoring method': row_name,\n",
+    "            'Dataset': col_name,\n",
+    "            'r': r,\n",
+    "            'p': p,\n",
+    "            'df': df_stat,\n",
+    "            'ci_lower': ci_lower,\n",
+    "            'ci_upper': ci_upper,\n",
+    "        }\n",
+    "        )\n",
+    "\n",
     "g.fig.tight_layout()\n",
     "\n",
     "g.fig.savefig(os.path.join(base_path, 'plots', f'all_methods{appendix}_vertical.png'), dpi=600)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0e6ece2-1c27-48cc-bca6-6d860bbfdf6b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stat_df = pd.DataFrame(stat_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47eabe26-7cdf-4592-bae7-ae0be7280fda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stat_df.to_csv(os.path.join(base_path,'plots', 'statistics.csv'))"
    ]
   },
   {
@@ -745,7 +814,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
