refactor data folder

--- a/data/preprocessing/subsetting_datasets_notebooks/select_basal_patients_in_breast.ipynb
+++ b/data/preprocessing/subsetting_datasets_notebooks/select_basal_patients_in_breast.ipynb
@@ -145,7 +145,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata.write(os.path.join(BASE_PATH_DATA, 'cansig_processed/breast.h5ad'))"
+    "adata.write(os.path.join(BASE_PATH_DATA, 'cansig_processed/breast_basal_like_samples.h5ad'))"
    ]
   }
  ],
