restructured and reran experimetns

--- a/notebooks/signature_noise_addition_experiments/sig_noise_experiment_figures.ipynb
+++ b/notebooks/signature_noise_addition_experiments/sig_noise_experiment_figures.ipynb
@@ -31,10 +31,10 @@
     "\n",
     "sc_names = ['ANS','Seurat', 'Seurat_AG','Seurat_LVG','Scanpy', 'Jasmine_LH', 'Jasmine_OR','UCell']\n",
     "\n",
-    "#max_abs_log2fc = 0.5\n",
-    "#min_pval = 0.01\n",
-    "max_abs_log2fc = None\n",
-    "min_pval = None\n",
+    "max_abs_log2fc = 0.5\n",
+    "min_pval = 0.01\n",
+    "# max_abs_log2fc = None\n",
+    "# min_pval = None\n",
     "\n",
     "if max_abs_log2fc is None and min_pval is None:\n",
     "    suffix = 'noise_genes_all_remaining'\n",
